[package]
name = "solarm-utils-rs"
version = "0.1.0"
edition = "2021"
description = "A set of utility functions which may exist but just slightly in an odd form to be usable on illumos systems"
license="MPL-2.0"
license-file="LICENSE"
homepage="https://solarm.org/projects/rust-utilities"
repository="https://github.com/solarm-project/solarm-utils-rs"

[dependencies]
