[package]
name = "solarm_utils"
version = "0.1.0"
edition = "2021"
description = "A set of utility functions which may exist but just slightly in an odd form to be usable on illumos systems"
license="MPL-2.0"
homepage="https://solarm.org/projects/rust-utilities"
repository="https://github.com/solarm-project/solarm-utils-rs"

[dependencies]
derive_builder = "0.12.0"
getset = "0.1.2"
miette = "5.6.0"
thiserror = "1.0.40"
